[package]
name = "aoc2020"
version = "0.1.0"
authors = ["Benjamin Trent <4357155+benwtrent@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest="0.10.9"
error-chain="0.12.4"
tokio = { version = "0.2.22", features = ["full"] }